[project]
name = "real-time-market"
version = "0.1.0"
description = "A simple real-time market data pipeline skeleton with FastAPI endpoints."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0,<0.116.0",
    "uvicorn[standard]>=0.30.0,<0.31.0",
]

[project.optional-dependencies]
dev = [
    "httpx>=0.27.0,<0.28.0",
    "pytest>=8.2.0,<9.0.0",
    "ruff>=0.5.0,<0.6.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py311"
